Complete CSS styling

--- a/style.css
+++ b/style.css
@@ -14,3 +14,12 @@ p {
     height: auto;
     width: 300px;
 }
+
+ol li ul li {
+    background-color: #9acd32;
+    display: inline;
+}
+
+h4 {
+    font-size: 20px;
+}
